fixed add user type dialog z-index problem

--- a/src/app/article/article.component.css
+++ b/src/app/article/article.component.css
@@ -38,7 +38,8 @@
 .articleType{
   margin-bottom: 20px;
 }
-/*.toolbar .w-e-menu{
+.toolbar .w-e-menu{
   z-index:0 !important;
-}*/
+}
+
 
